# devopsloft

./: .all-contributorsrc  .dockerignore  .env  .env.ci  .env.ci.template  .env.dev.example  .env.dev.template  .env.prod.example  .env.prod.template  .env.stage.example  .env.stage.template  .gitattributes  .gitignore  .travis.yml  1  CV.md  Dockerfile  Makefile  README.md  SYLLABUS.md  Utility.rb  Vagrantfile  Vagrantfile.local.example  application.py  aws.yml  bootstrap-app.sh  bootstrap-db.sh  bootstrap-infra.sh  bootstrap-monitoring.sh  bootstrap.sh  checkPythonVer.py  check_dos_format.sh  config.py  createPemFiles.py  create_db.sql  create_pem.py  createec2.sh  database.py  db-backup.py  dbtools.py  (+21 more)
.github/: dependabot.yml
app_s2i/: Dockerfile  application.py  requirements.txt
data/: mailingList.csv  usersdatabase.db
database/: application02.sh  exporter01.sh  exporter02.sql
db_s2i/: Dockerfile  create_db.sql
delivery_pipeline/: Vagrantfile  docker-compose.yml
deploy/: aws-prod.tfvars  aws-stage.tfvars  devopsloft.tf
devopsloft/: web.py
docker/: Dockerfile  application.py  entrypoint.sh  requirements-dev.txt  requirements.txt
docker-files/: Dockerfile-mysql
docker_spin_solution/: Dockerfile
lib/: vagrant.rb
mod_auth/: forms.py  models.py
modules/: loft_hvac.py  loft_meetup.py
monitoring_assets/: dashboard.yml  datasource.yml  devopsloft.json  node_exporter.service  os.rules  prometheus.service  prometheus.yml
playbooks/: bootstrap-infra.yml
project/: ecs-params.yml  requirements.txt  spin-docker.py
provisioning/: playbook.yml
(+186 files in other folders)
